updating repo with lectures

--- a/mod-2/day-5-Bayes-Theorem/bayes-060120-SamuelM.ipynb
+++ b/mod-2/day-5-Bayes-Theorem/bayes-060120-SamuelM.ipynb
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "0.25"
+       "0.5"
       ]
      },
      "execution_count": 1,
@@ -126,8 +126,7 @@
     "probability_B_and_G = 1/4\n",
     "\n",
     "probability_B_given_G = 1/4/(1/2) \n",
-    "probability_B_given_G\n",
-    "1/4"
+    "probability_B_given_G\n"
    ]
   },
   {
